@@ -1,5 +1,5 @@
 # This file is part of Rubber and thus covered by the GPL
-# (c) Emmanuel Beffara, 2003
+# (c) Emmanuel Beffara, 2003--2004
 """
 Support for the beamer package.
 """
@@ -10,6 +10,8 @@ class Module (rubber.Module):
 	def __init__ (self, env, dict):
 		self.env = env
 		env.watch_file(env.src_base + ".head")
+		env.watch_file(env.src_base + ".nav")
+		env.watch_file(env.src_base + ".snm")
 
 	def clean (self):
-		self.env.remove_suffixes([".head"])
+		self.env.remove_suffixes([".head", ".nav", ".snm"])
